--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 # Site settings
-baseURL = "https://example.com"
+#baseURL = "https://example.com"
+baseURL = 'https://marisseboutique.pages.dev'
 languageCode = "en-US"
 title = "Split - HTML Template Demo"
 theme = "hugo-split-theme"
